css/style.css
/*==========*/
/*HOME PAGE*/
/*==========*/

.container {
  background: #356618;
  width: 942px;
  margin: 0 auto;
  height: 1680px;
}

a {
  text-decoration:none;
  color:inherit;
}

/* header */

.logo {
  width: 901px;
  height:99px;
  background: #fff;
  margin-top:0px;
  margin-left:21.5px;
  margin-right:21.5px;
}

.navbar {
  text-align:center;
  height: 53px;
}

.navbar ul {
  background: #4b4b4b;
  margin-top:0px;
  margin-left:21.5px;
  margin-right:21.5px;
  border-bottom: 1px solid #fff;

}

.navbar ul li {
  list-style: none;
  display: inline-block;
  padding-left: 40px;
  color: #f0f2c9;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 16px;
  padding-right:40px;
}


.navbar ul li:hover {
  background: #daead0;
  color: #1b330c;
}


.logo img {
  display:block;
  margin: 0 auto;
}

/* main content */

.upper-content {
  position:relative;
  margin-top: 6px;
  margin-left:21.5px;
  margin-right:21.5px;
  background-image:url('../images/gardening1.jpg');
  width: 901px;
  height:432px;
}



.main-tips {
  position:absolute;
  bottom: 0px;
  background: #454733;
  width: 900px;
  height:112px;
  opacity: .85;
}

.main-tips h1{
  color: #f0f2c9;
  margin-top: 5px;
  margin-left: 21px;
}

.main-tips h1:hover {
  color: #fff;
}

.main-tips p {
  margin-left: 21px;
}

.main-tips h1 {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 24px;
  font-weight: normal;
  text-transform: uppercase;
}
.main-tips p {
  color: #d2e1c9;
  margin-bottom: 100px;
}

.tips-section ul {
  list-style:none;
  overflow:hidden;

}

.tips-section ul li {
  float:left;
  overflow:hidden;
  width:280px;
  padding: 9px 20px 7px 0;

}

.tips-section ul li img {
  float:left;
  border: 1px solid white;
}

.tips-section ul li h3 {
 margin: 0;
 margin-left: 100px;
 color: #e3e699;;
}

.tips-section p {
  margin-left: 100px;
  color: white;
}

/*lower content*/

.lower-content {
  width: 900px;
  height:720px;
  background-color: #fff;
  margin: 0 auto;
}

.lower-title {
  width:862px;
  height:38px;
  background-color: #dce9d4;
  border-bottom: 1px solid #85977b;
  margin:0 auto;
  position:relative;
  top: 24px;

}

.lower-title h3 {
  margin-left:15px;
  padding-top: 5px;
  color: #71724c;
  text-transform: uppercase;
}

.lower-content #tip-list {
  margin-top:23px;
  list-style:none;
 /* margin: 0;*/
  overflow: hidden;
  padding: 21px 0;


}

.lower-content #tip-list li {
  float: left;
  width: 200px;
  margin-left: 20px;
}

.lower-content #tip-list li {
  text-align: left;
}

.lower-content #tip-list h4 {
  color: #836145;
  font-size: 16px;
  font-weight: normal;
  margin: 0;
  padding: 24px 0 10px;
  text-transform:uppercase ;
}

.lower-content #tip-list p {
  color: #4b4b4b;
  letter-spacing: 0.028em;
  line-height: 24px;
  text-align:left;
}

#tip-list {
  border-bottom: 1px solid gray;
}

.week-pic {
  display:block;
  float:left;
  margin-left:20px;
}

.tip-numbers {
  float:right;
  width:540px;
}

.week-title {
  width: 540px;
  height: 40px;
  background: #dce9d4;
  color: #836145;
  text-transform: uppercase;
  position:relative;
  right: 10px;
  border-bottom: 1px solid #85977b;
}

.week-title h3 {
  font-weight: normal;
  position:relative;
  top: 7px;
  left: 14px;
}

.week {
  list-style-type: decimal;
}
.week li {
  position:relative;
  left: -28px;
  line-height: 24px;
  letter-spacing: 0.028em;
  text-align: left;
}

.extra-content {
  margin: 0 auto;
  width: 900px;
  background: #fff;
  height: 150px;
  color:gray;
}

.extra-content ul {
  list-style: none;
}

.extra-content h2 {
  text-align: center;
  margin-top: 15px;
  padding-top: 10px;
  font-size: 18px;
  font-weight: normal;
  text-shadow: 1px 1px 1px #fff;
  text-transform: uppercase;
}

.extra-content li {
  display: inline-block;
  margin-left: 146px;
}


.extra-content a {
  display:block;
  min-height: 20px;
  background-repeat: no-repeat;
  background-size: 20px 20px;
  padding: 0 0 0 30px;
  margin: 0 0 10px;
  text-decoration: none;
  letter-spacing: 0.05em;
  color: gray;
}



.extra-content li.mail a {
  background-image: url("../images/mailgreen.png");
}

.extra-content li.twitter a {
  background-image: url("../images/twitter_green.png");
}

.extra-content li.facebook a {
  background-image: url("../images/facebook_green.png")
}

.extra-content p {
  text-align: center;
}

.extra-content a:hover {
  color:black;
}

.extra-content a.mail:hover {
  background-image: url("../images/mail_fade.png");
}

.extra-content a.twitter:hover{
  background-image: url("../images/twitter_fade.png");
}

.extra-content a.facebook:hover{
  background-image: url("../images/facebook_fade.png");
}

/*===========*/
/*ABOUT PAGE*/
/*===========*/

.about-wrapper {
  background: #356618;
  width: 942px;
  margin: 0 auto;
  height: 1000px;
}
.about-content {
  margin-left:21.5px;
  margin-right:21.5px;
  background-color:white;
}

.about-content h2 {
  padding-top: 36px;
  text-transform:uppercase;
  color:gray;
  line-height: 24px;
}


.about-text {
  margin-left: 20px;
  margin-right:20px;
}

.about-text h3 {
  color: #8f6b52;
  font-weight:normal;
  letter-spacing: 0.028em;
  line-height: 24px;
}

.about-text p {
  color: #37715d;
  line-height:24px;
}

/*##########*/
/*PLANT PAGE*/
/*##########*/

.plant-content {
  margin-left:21.5px;
  margin-right:21.5px;
  background-color:white;
  height: 925px;
}

.col-left {
  list-style:none;
}
.col-left img{
  float:left;
  width: 310px;
  margin-right:21px;
}

.col-left div {
  /*float:right;*/
  height: 218px;
  margin-right:20px;
}

.extra-content {
  clear:both;
}

.plant-header {
  margin-left: 40px;
}

.plant-header h2 {
  padding-top:33px;
  margin-bottom:35px;
  color: #818181;
  text-transform:uppercase;
}

.extra-content {
  padding-top: 10px;
}

.plant-content h3 {
  color: #836145;
  margin-bottom: -8px;
}

.plant-content p {
  color: #356618;
  line-height: 25px;
  word-spacing: 2px;
}

.extra-content {
  margin-top: 25px;
}

/*#############*/
/*GARDENS PAGE*/
/*#############*/
/*.plant-content {
  margin-left:21.5px;
  margin-right:21.5px;
  background-color:white;
  height: 925px;
}*/

.gardens-wrapper {
  margin-top: 20px;
  margin-left:21.5px;
  margin-right: 21.5px;
  background-color: white;
  height:925px;
}

.col-gardens {
  list-style: none;
}

.col-gardens div {
  height: 212px;
}
.col-gardens img {
  /*margin-top:8px;*/

  width: 310px;
  margin-right:21px;
  float:left;
}

.gardens-wrapper div:first-child {
  padding-top: 33px;
  margin-left: 40px;
}

.gardens-wrapper div:first-child h2 {
  color: #818181;
  text-transform:uppercase;
}

.gardens-wrapper p {
  /*color: #356618;*/
  line-height:25px;
  word-spacing: 2px;
}


.gardens-wrapper h3 {
  color: #836145;
}

